# MPointer

./: CMakeLists.txt  MPointer.cpp  README.md  main.cpp
app/: CMakeLists.txt  main.cpp
app/doublyLinkedList/: DoublyLinkedList.cpp  DoublyLinkedList.h
app/sortingAlgorithms/: sortingAlgorithms.h
doublyLinkedList/: DoublyLinkedList.h
examples/: main.cpp
headers/: MPointer.h  MPointerGC.h
source/: MPointer.cpp  MPointerGC.cpp
tests/: DoublyLinkedListTest.cpp  MPointerGCTest.cpp  MPointerTest.cpp  SortingAlgorithmsTest.cpp
